# aabb

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flatbush.hpp
.github/workflows/: rust.yml
benches/: profile_bench.rs  profile_bench_i32.rs  profile_parallel.rs  query_intersecting_bench.rs  query_intersecting_bench_i32.rs  query_intersecting_bench_leg.rs
docs/: samply.txt
examples/: hilbert_visualizer.rs  perf.rs  perf_build.rs  perf_build_i32.rs  perf_build_xl.rs  perf_i32.rs  perf_nearest_k.rs  perf_query_circle_points.rs  query_circle.rs  query_circle_points.rs  query_contained_by.rs  query_containing.rs  query_in_direction.rs  query_in_direction_k.rs  query_intersecting.rs  query_intersecting_id.rs  query_intersecting_k.rs  query_nearest.rs  query_nearest_k.rs  query_nearest_k_points.rs  query_point.rs  save_load.rs
src/: comparison_tests.rs  component_tests.rs  component_tests_i32.rs  hilbert_rtree.rs  hilbert_rtree_i32.rs  hilbert_rtree_leg.rs  integration_test.rs  lib.rs  prelude.rs  queries.rs  test_legacy_query.rs  test_point_optimizations.rs
